<resources>
    <string name="app_name">projectem7_david_raul</string>
    <string name="volver">Retorna</string>
    <string name="txt_user">Usuari</string>
    <string name="txt_registro">Registre</string>
    <string name="txt_no">No tens compte?</string>
    <string name="title_placeholder">Titol</string>
    <string name="title_activity_pantalla_principal">pantalla_principal</string>
    <string name="repite_tu_contrase_a">Repeteix la contrasenya</string>
    <string name="registro">Registre</string>
    <string name="registrarse">Registrar-se</string>
    <string name="img_inici">Imatge càmara retro</string>
    <string name="repetir_Contrase_a">Repeteix contrasenya</string>
    <string name="pregunta_valoracion">Quan t\'ha agradat la pelicula?</string>
    <string name="pregunta_1a10">Puntuació:</string>
    <string name="nombre">Nom:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_social">Social</string>
    <string name="menu_home">Ses seleccions</string>
    <string name="menu_peliculas">Pel·licules</string>
    <string name="introduce_tus_apellidos">Introdueix els teus cognoms:</string>
    <string name="introduce_tu_nombre">Introdueix el teu nom</string>
    <string name="introduce_tu_contrase_a">Introdueix la teva contrasenya</string>
    <string name="info">Sinopsi</string>
    <string name="director">Director</string>
    <string name="contrase_a2">Contrasenya</string>
    <string name="contrase_a">Contrasenya</string>
    <string name="btn_acceso">Accés</string>
    <string name="apodo">Adreça electrónica</string>
    <string name="ca">Català</string>
    <string name="es">Espanyol</string>
    <string name="en">Anglès</string>
    <string name="quadre_resenya">Resenya</string>
    <string name="Menu_Logout">Desconnectar</string>
    <string name="hint_missatge">Escriu un missatge...</string>
    <string name="menu_usuari">Usuari</string>

    <string-array name="pelis_titulos">
        <item>Robocop</item>
        <item>Django</item>
        <item>Malditos Bastardos</item>
        <item>Kingsman</item>
        <item>Watchmen</item>
    </string-array>

    <string-array name="pelis_director">
        <item>Paul Verhoeven</item>
        <item>Quentin Tarantino</item>
        <item>Quentin Tarantino</item>
        <item>Matthew Vaughn</item>
        <item>Zack Snyder</item>
    </string-array>

    <string-array name="pelis_resumen">
        <item>Ambientada en una sociedad futura. Alex J. Murphy, agente de policía de Detroit, es asesinado en acto de servicio. Para acabar con la delincuencia en la ciudad, las autoridades aprueban la creación de una máquina letal, mitad robot, mitad hombre, a la que llaman Robocop, y para fabricarla utilizan el cuerpo de Murphy. El experimento parece un éxito, pero el policía, a pesar de estar muerto, conserva la memoria y decide vengarse de sus asesinos.</item>
        <item>En Texas, dos años antes de estallar la Guerra Civil Americana, King Schultz (Christoph Waltz), un cazarrecompensas alemán que sigue la pista a unos asesinos para cobrar por sus cabezas, le promete al esclavo negro Django (Jamie Foxx) dejarlo en libertad si le ayuda a atraparlos. Él acepta, pues luego quiere ir a buscar a su esposa Broomhilda (Kerry Washington), esclava en una plantación del terrateniente Calvin Candie (Leonardo DiCaprio).</item>
        <item>Segunda Guerra Mundial (1939-1945). En la Francia ocupada por los alemanes, Shosanna Dreyfus (Mélanie Laurent) presencia la ejecución de su familia por orden del coronel Hans Landa (Christoph Waltz). Después de huir a París, adopta una nueva identidad como propietaria de un cine. En otro lugar de Europa, el teniente Aldo Raine (Brad Pitt) adiestra a un grupo de soldados judíos ("The Basterds") para atacar objetivos concretos. Los hombres de Raine y una actriz alemana (Diane Kruger), que trabaja para los aliados, deben llevar a cabo una misión para hacer caer a los jefes del Tercer Reich. El destino quiere que todos se encuentren bajo la marquesina de un cine donde Shosanna espera para vengarse.</item>
        <item>Un veterano agente secreto inglés (Colin Firth) debe entrenar a un joven sin refinar (Taron Egerton), pero que promete convertirse en un competitivo agente gracias a un ultra-programa de entrenamiento, al mismo tiempo que una amenaza global emerge procedente de un genio retorcido. Adaptación del cómic de Mark Millar y Dave Gibbons.</item>
        <item>Estados Unidos, años 80. La Guerra Fría está en su apogeo, y los superhéroes, que antes habían sido admirados, ahora son perseguidos por la ley. Un día aparece muerto uno de ellos, "El Comediante", que trabajaba para la CIA. Su amigo Rorschach, el único héroe enmascarado en activo, emprenderá la investigación de su muerte, tras la que se oculta algo muy importante. Esperadísima adaptación del cómic de Alan Moore y Dave Gibbons (1986).</item>
    </string-array>

    <string-array name="pelis_info">
        <item>Violencia en la Detroit del futuro</item>
        <item>Cultura Pop en el Western</item>
        <item>La 2ª GM menos históricamente correcta</item>
        <item>Espías gamberros</item>
        <item>Quién vigila a los vigilantes</item>
    </string-array>

    <array name="pelis_images">
        <item>@drawable/robocop</item>
        <item>@drawable/django</item>
        <item>@drawable/malditos</item>
        <item>@drawable/kingsman</item>
        <item>@drawable/watchmen</item>
    </array>
    <string name="introduce_tu_apodo">Introdueix adreça electrònica</string>
    <string name="compte">Compte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_amics">Amics</string>

</resources>
