<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_pelis"
            android:title="@string/menu_peliculas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_social"
            android:title="@string/menu_social" />
    </group>
    <item android:title="@string/compte">
        <menu>
            <item
                android:id="@+id/nav_usuario"
                android:icon="@drawable/ic_usuario"
                android:title="@string/menu_usuari"
                android:onClick=""/>
            <item
                android:id="@+id/nav_amigos"
                android:icon="@drawable/ic_addamigo"
                android:title="@string/menu_amics"
                android:onClick=""/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/Menu_Logout"
                android:onClick="logout"/>
        </menu>
    </item>
</menu>
