<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cat.villalba.projectem7_david_raul.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_totespelis"
        android:name="cat.villalba.projectem7_david_raul.ui.totesPelicules.TotesPelis"
        android:label="@string/menu_peliculas"
        tools:layout="@layout/fragment_totespelis" />

    <fragment
        android:id="@+id/nav_social"
        android:name="cat.villalba.projectem7_david_raul.ui.social.socialFragment"
        android:label="@string/menu_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/nav_usuario"
        android:name="cat.villalba.projectem7_david_raul.ui.users.usuariosFragment"
        android:label="@string/menu_usuari"
        tools:layout="@layout/fragment_usuarios" />
</navigation>